[1.8.0-SNAPSHOT]
- Update to LibGDX 1.9.8, RoboVM 2.3.3
- [BREAKING] UI Modal and Containers are now unified into a single Container class
- Added support for both flex and pixel coordinate UI layouts
- Added support for static, ninepatch and tiling UI element backgrounds
- Improved UI theme JSON consistency
- Improved scrolling when dragging scroll thumb in ScrollBox
- Fixed UI elements changing state within margin area

[1.7.14]
- (#76) Added support for Tiled object shapes
- (#77) Fixed fade transitions modifying the color instance

[1.7.13]
- Fixed out of bounds exception when switch between TabView and another navigation type

[1.7.12]
- Added IntTreeMap implementation
- Fixed incorrect clip caching between scrollbox and other elements
- Reduced UI render node + layer memory usage
- Reduced memory usage by switching to IntMap where appropriate

[1.7.11]
- Fixed Xbox360 controller left/right trigger detection on Windows
- Fixed incorrect Mac/Linux key bindings on Xbox360 controller
- Fixed UiUtils#setUpControllerInput not initializing PS4 controller correctly
- Fixed TiledMapLoader crashing when loading cached Tiled layers asynchronously
- [BREAKING] Removed PS3 controller support due to inconsistent support across platforms

[1.7.10]
- Significantly reduce memory usage of XML and JSON serializers

[1.7.9]
- [BREAKING] mini2Dx artemis systems moved from package com.artemis.system to com.artemis to provide access to artemis-odb scopes
- Fix interpolation and rendering systems not checking disabled flag
- Fix DispersedIntervalEntitySystem not removing entities from processing queue if deleted between intervals

[1.7.8]
- Fix collisions not using IDs for equals/hashcode
- Optimise debug rendering of QuadTrees

[1.7.7]
- Added Select#getOption(index) method
- Fixed nested defer() tasks immediately completing with parent

[1.7.6]
- Changed RenderLayer#render to public method
- Reduce memory usage of ParentRenderNode by sharing clip cache across instances

[1.7.5]