@@ -354,11 +354,11 @@ public class AnimatedImage extends UiElement {
 	}
 
 	@Override
-	public void syncWithRenderNode() {
+	public void syncWithUpdate() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
 		}
-		processDeferred();
+		processUpdateDeferred();
 	}
 
 	@Override
