@@ -123,11 +123,11 @@ public class Label extends UiElement {
 	}
 	
 	@Override
-	public void syncWithRenderNode() {
+	public void syncWithUpdate() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
 		}
-		processDeferred();
+		processUpdateDeferred();
 	}
 	
 	@Override
