@@ -47,11 +47,11 @@ public class ProgressBar extends UiElement {
 	}
 	
 	@Override
-	public void syncWithRenderNode() {
+	public void syncWithUpdate() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
 		}
-		processDeferred();
+		processUpdateDeferred();
 	}
 
 	@Override
