@@ -108,11 +108,11 @@ public class TextBox extends UiElement implements Actionable {
 	}
 	
 	@Override
-	public void syncWithRenderNode() {
+	public void syncWithUpdate() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
 		}
-		processDeferred();
+		processUpdateDeferred();
 	}
 
 	/**
